--- a/index.html
+++ b/index.html
@@ -1115,7 +1115,13 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        <div class="d-flex flex-column flex-wrap gap-1">
+                        <div class="d-flex flex-column flex-wrap gap-0">
+                            <div class="d-flex flex-row gap-1 justify-content-center flex-wrap">
+                                <button class="btn btn-primary" onclick="editor.tool.confirm();wcSyncHandler.sync(this.closest('.modal'))">Confirm</button>
+                                <button class="btn btn-primary" onclick="editor.tool.cancel();wcSyncHandler.sync(this.closest('.modal'))">Cancel</button>
+                                <button class="btn btn-primary" onclick="editor.tool.center();wcSyncHandler.sync(this.closest('.modal'))">Center</button>
+                            </div>
+                            <hr>
                             <form  class="d-flex flex-column gap-1" action=""
                                 
                                 data-wc-sync-form="editor.document.drawLayer"
@@ -1134,11 +1140,7 @@
                                     <input class="form-control" type="number" name="top" placeholder="top" min="-10000" max="10000" oninput="editor.document.drawLayer.top = this.value; editor.tool.readyUtt(); editor.tool.draw();">
                                 </div>
                             </form>
-                            <hr>
-                            <div class="d-flex flex-row gap-1 justify-content-center flex-wrap">
-                                <button class="btn btn-primary" onclick="editor.tool.confirm();wcSyncHandler.sync(this.closest('.modal'))">Confirm</button>
-                                <button class="btn btn-primary" onclick="editor.tool.cancel();wcSyncHandler.sync(this.closest('.modal'))">Cancel</button>
-                            </div>
+
                         </div>
                     </div>
                 </div>
