--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 
     <!-- WG2 uploader -->
 
-    <script src="/WG2/js/Wg2Uploder.js"></script>
+    <!-- <script src="/WG2/js/Wg2Uploder.js"></script> -->
+    <script src="http://mins01.com/WG2/js/Wg2Uploder.js"></script>
     <!-- //WG2 uploader -->
 
     <!-- color palette -->
