--- a/index.html
+++ b/index.html
@@ -607,10 +607,13 @@
                         <h2 class="modal-title fs-4"><i class="bi bi-image"></i> PREVIEW</h1>
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <div class="modal-body">
+                    <div class="modal-body pb-0" style="flex:0 0 auto">
                         <div class="text-center form-text mb-1">
-                            <div id="img-preview-size"></div>
+                            <div class="fs-4" id="img-preview-natural-size"></div>
+                            <div class="fs-6" id="img-preview-size"></div>
                         </div>
+                    </div>
+                    <div class="modal-body">
                         <div><img id="img-preview" class="my-3 shadow" src="" alt="image preview"></div>
                     </div>
                 </div>
